--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLCtAg7xqzCmqTussTL9DeAWtfkGloyBmfGYFdinY4VOuMRvX_eDIi8OE&s=10') no-repeat center center;
+            background: url('https://wallpapers.com/images/hd/good-anime-solo-leveling-sung-jinwoo-7dpe22ru99xw9r4o.jpg=10') no-repeat center center;
             background-size: cover;
             display: flex;
             justify-content: center;
